Revert java.net.http change